--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "email": "npm@veldstra.org"
   },
   "dependencies": {
+    "@kubernetes/client-node": "^0.15.1",
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/plugin-help": "^3.2.0",
