--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "got": "^11.1.2",
     "hpagent": "^0.1.1",
     "https-proxy-agent": "^5.0.0",
+    "ioredis": "^4.28.0",
     "ip": "^1.1.5",
     "js-yaml": "^3.13.1",
     "jsck": "^0.3.2",
